objects/Transaction_History__c.object
<CustomObject>
    <description>The purpose of this object is mainly to track the differents transactions that occurs over Assets object However Could be used as generic transaction object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction History Entries</relationshipLabel>
        <relationshipName>Transaction_History_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Requiere Ajuste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Transaction History Entries</relationshipLabel>
        <relationshipName>Transaction_History_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blacklisted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Incluir en Blacklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Baja de Subscripciones</relationshipLabel>
        <relationshipName>Transaction_History_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imei__c</fullName>
        <description>Representa el valor del Imei de un equipo o dispositivo para el cual existe una transacción de suspension o habilitación</description>
        <label>Imei</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Palabra Clave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Código de Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_Channel__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Canal de Alta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_Date__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Fecha de Alta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tipo_Fraude_Subcategoria__c</fullName>
        <label>Tipo Fraude Subcategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_Fraude__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrativo por suscripción</fullName>
                </value>
                <value>
                    <fullName>Investigación</fullName>
                </value>
                <value>
                    <fullName>Desconocimiento</fullName>
                </value>
                <value>
                    <fullName>Irregular</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Bypass</fullName>
                </value>
                <value>
                    <fullName>Hackeo</fullName>
                </value>
                <value>
                    <fullName>IRSF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Fraude__c</fullName>
        <label>Tipo Fraude</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Técnico</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Campo utilizado para identificar si es una suspensión de siniestro o administrativa</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siniestro</fullName>
                </value>
                <value>
                    <fullName>Administrativa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsubscribe_Channel__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Canal de Baja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Reason__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Motivo de baja</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Desconocimiento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Used in Subscription History Record Type (by TechCare)</description>
        <label>Proveedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sinister_type__c</fullName>
        <label>Tipo Siniestro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Robo</fullName>
                </value>
                <value>
                    <fullName>Hurto</fullName>
                </value>
                <value>
                    <fullName>Extravio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction History Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Account__c</columns>
        <columns>Subscribe_Date__c</columns>
        <columns>Description__c</columns>
        <columns>New_Status__c</columns>
        <columns>Old_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>sinister_type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Baja_de_Suscripciones</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Subscribe_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Subscribe_Channel__c</columns>
        <columns>Unsubscribe_Channel__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Keyword__c</columns>
        <columns>Vendor__c</columns>
        <columns>Description__c</columns>
        <columns>Unsubscribe_Reason__c</columns>
        <columns>Adjustment__c</columns>
        <columns>Blacklisted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transaction_History__c.Subscription_History</value>
        </filters>
        <label>Baja de Suscripciones</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Transaction_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction History Entries</pluralLabel>
    <recordTypes>
        <fullName>Asset_Transaction_History</fullName>
        <active>true</active>
        <label>Asset Transaction History</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription_History</fullName>
        <active>true</active>
        <label>Subscription History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>